--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,8 @@ asgiref==3.9.1
 contourpy==1.3.3
 cycler==0.12.1
 Django==5.2.5
-gunicorn
+gunicorn==23.0.0
+whitenoise==6.5.0
 fonttools==4.59.1
 kiwisolver==1.4.9
 matplotlib==3.10.5
